# walmart-sales-forecasting-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ignore_branches.txt  main.py  pyproject.toml
.github/: CODEOWNERS.txt  pull_request_template.md
.github/workflows/: ci.yml  pr-title-checker.yml  stale.yml
src/: __init__.py
tests/: test_pre_commit_linter.py  test_smoke.py
